finished sorting by price

--- a/RavaisiDesktopWPF/RavaisiDesktopWPF.csproj
+++ b/RavaisiDesktopWPF/RavaisiDesktopWPF.csproj
@@ -109,6 +109,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Searching.cs" />
+    <Compile Include="Sorting.cs" />
     <Compile Include="XAMPP.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
