--- a/RavaisiDesktopWPF/RavaisiDesktopWPF.csproj
+++ b/RavaisiDesktopWPF/RavaisiDesktopWPF.csproj
@@ -109,9 +109,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CopontentsConstructors.cs" />
+    <Compile Include="editProductDialog.xaml.cs">
+      <DependentUpon>editProductDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Searching.cs" />
     <Compile Include="Sorting.cs" />
     <Compile Include="XAMPP.cs" />
+    <Page Include="editProductDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
